Fix highlight misalignment in <spa-textbox>

--- a/css/components/spa-textbox.css
+++ b/css/components/spa-textbox.css
@@ -5,13 +5,15 @@ spa-textbox {
   overflow: hidden;
 }
 
-spa-textbox > span {
-  position: relative;
+spa-textbox > div {
   padding: 0;
   color: transparent;
+  height: 100%;
+  overflow-y: auto;
 }
 
 spa-textbox mark {
+  color: transparent;
   background: none;
   text-shadow: 0px 0px 2px red;
 }
